monitoring/prometheus-stack/grafana-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: prometheus-stack
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - grafana.vanillax.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
